<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="look_at_my_gui_text">Look at my GUI:</string>
    <string name="click_here_text">CLICK HERE</string>
    <string name="check_this_out_text">Check this out!</string>
    <string name="switch_on_off_text">Switch on / off</string>
    <string name="type_here_text">Type here</string>
    <string name="toast_message">Here is more information</string>
    <string name="switch_is_now_text">The switch is now</string>
    <string name="on_text">on</string>
    <string name="off_text">off</string>
    <string name="undo_text">UNDO</string>
    <string name="enter_email_text">Enter your email address:</string>
    <string name="type_email_hint">Type email here</string>
    <string name="enter_password_text">Type your password:</string>
    <string name="login_text">Login</string>
    <string name="your_profile_text">Your profile</string>
    <string name="your_name_text">Your name:</string>
    <string name="enter_name_text">Enter your name</string>
    <string name="your_picture_text">Your picture</string>
    <string name="pic_instr_text">Click the button above to take a picture</string>
    <string name="empty_email_toast">Email address may not be empty.</string>
    <string name="delete_alert_title">Do you want to delete this?</string>
    <string name="selected_row_is">The selected row is:</string>
    <string name="database_id_is">The database ID is:</string>
    <string name="open_weather">Open Weather</string>
    <string name="visual_weather">Visual Weather</string>
    <string name="current_temp">%1$s°C</string>
    <string name="min_temp">The min temperature for today is: %1$s°C</string>
    <string name="max_temp">The max temperature for today is: %1$s°C</string>
    <string name="uv_index">The UV index for today is: %1$s</string>
    <string name="send_text">SEND</string>
    <string name="receive_text">RECEIVE</string>
    <string name="type_here">Type here</string>
    <string name="msg_here_text">Message here</string>
    <string name="id_text">"ID: %1$d"</string>
    <string name="id_hint">"ID:"</string>
    <string name="is_a_send_msg">Is a send message</string>
    <string name="hide_text">HIDE</string>
</resources>